clusters/cluster1/Staging/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: staging
  annotations:
    name: staging
