clusters/cluster1/Staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: color-app
  namespace: staging
  labels:
    app: color
    environment: staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: color
  template:
    metadata:
      labels:
        app: color
    spec:
      containers:
      - name: white
        image: tayebe/color-app:1.0.7
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
