clusters/cluster1/Staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: color-app
  namespace: staging
spec:
  selector:
    app: color
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
