clusters/cluster1/Staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: color-app
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /staging/(.*)
        backend:
          service:
            name: color-app
            port:
              number: 8080
